--- a/freecodeCamp_projects/05_sidebar/index.html
+++ b/freecodeCamp_projects/05_sidebar/index.html
@@ -11,7 +11,10 @@
       <div class="sidebar-show">
         <div class="upper">
           <h1 class="name">logo</h1>
-          <h1 id="logo">#</h1>
+          <div id="logo">#
+            <div class="infologo">close</div>
+          </div>
+          
         </div>
         <ul class="ul">
           <li>about</li>
@@ -19,7 +22,7 @@
           <li>contanct</li>
         </ul>
       </div>
-      <h1 id="btn" class="hide">#</h1>
+      <h1 id="btn" class="hidethis">#</h1>
     </div>
 
     <script src="app.js"></script>
