Refactor menu data structure and enhance menu display functionality with filtering options

--- a/freecodeCamp_projects/07_menu/index.html
+++ b/freecodeCamp_projects/07_menu/index.html
@@ -22,18 +22,19 @@
           <h1 class="font-mono text-3xl">our menu</h1>
         </div>
         <!-- options -->
-        <div class="options w-full flex justify-center gap-4">
-          <button class="all btn-2">all</button
-          ><button class="breakfast btn-2">breakfast</button
-          ><button class="lunch btn-2">lunch</button
-          ><button class="shakes btn-2">shakes</button>
+        <div class="options w-full flex justify-center gap-4 m-10">
+          <button class="all btn-2"  data-id="all">all</button
+          ><button class="breakfast btn-2" data-id="breakfast">breakfast</button
+          ><button class="lunch btn-2" data-id="lunch">lunch</button
+          ><button class="shakes btn-2" data-id="shakes">shakes</button>
         </div>
         <!-- menu -->
         <div class="menu w-full flex flex-wrap justify-center">
+          <!-- <div class="first menu-box"></div>
           <div class="first menu-box"></div>
           <div class="first menu-box"></div>
           <div class="first menu-box"></div>
-          <div class="first menu-box"></div>
+          <div class="first menu-box"></div><div class="first menu-box"></div><div class="first menu-box"></div><div class="first menu-box"></div><div class="first menu-box"></div> -->
         </div>
       </div>
     </div>
